--- a/src/main/resources/assets/scanner/models/block/biomeScanner.json
+++ b/src/main/resources/assets/scanner/models/block/biomeScanner.json
@@ -1,6 +1,7 @@
 { "parent": "minecraft:block/cube_all",
   "source": "[120, -38, 99, 98, 18, -56, -51, -52, 75, 77, 46, 74, 76, 43, 81, 53, 118, 76, -52, 44, -78, 103, -112, 67, 22, 41, -56, 73, -52, -53, 46, -74, 47, 75, 44, -54, 76, -52, 43, -79, -51, 79, -52, 102, 96, 104, 96, 105, 96, -4, -1, 127, 1, -21, -2, -65, 11, 88, 33, 100, 3, 99, 3, -29, -86, -73, -5, -1, -18, -1, -69, 106, -21, -1, -1, 13, -116, -11, -1, -2, -1, -81, -1, -121, 29, 66, 100, -2, -93, 0, 84, 17, -104, 42, 4, 11, 76, -1, -125, -56, -31, -110, -81, 39, 74, -1, 127, -100, -6, -95, 122, -55, -42, 95, 79, 72, -1, 127, 10, -11, -1, -61, -17, 63, -88, 126, 18, -62, 23, 119, -4, 96, -117, -33, -19, -95, -96, -8, 93, 27, 10, -118, 95, 0, 0, 13, -75, 105]",
   "textures": {
+    "particle": "scanner:blocks/biomeScanner_top",
     "side": "scanner:blocks/biomeScanner_side",
     "top": "scanner:blocks/biomeScanner_top",
     "bottom": "scanner:blocks/biomeScanner_bottom"
