--- a/src/main/resources/assets/scanner/blockstates/biomeScannerUltimate.json
+++ b/src/main/resources/assets/scanner/blockstates/biomeScannerUltimate.json
@@ -1,5 +1,7 @@
 {
   "variants": {
-    "normal": { "model": "scanner:biomeScanner" }
+    "normal": {
+      "model": "scanner:biomeScannerUltimate"
+    }
   }
 }
