--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "1.2"
+version = "1.2.7"
 group = "eladkay.scanner" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "scanner"
 
@@ -40,7 +40,7 @@ repositories {
 dependencies {
     compile "mcp.mobius.waila:Waila:1.7.0-B3_1.9.4"
     compile "net.minecraftforge.lex:YUNoMakeGoodMap:1.10.2-6.1.0.22:universal"
-    compile "com.github.LatvianModder:FTBLib:api-1.0"
+    //compile "com.github.LatvianModder:FTBLib:api-1.0"
 }
 
 apply plugin: 'java'
