--- a/build.gradle
+++ b/build.gradle
@@ -31,16 +31,37 @@ minecraft {
 }
 
 repositories {
-    maven { url "https://jitpack.io" }
     maven { url "http://maven.epoxide.xyz" }
     maven { url "http://mobiusstrip.eu/maven" }
     maven { url "http://chickenbones.net/maven/" }
+    ivy {
+        name "LatMod"
+        artifactPattern "http://mods.latmod.com/[module]/[revision]/[module]-[revision](-[classifier]).[ext]"
+    }
+    ivy {
+        name "CraftTweaker"
+        artifactPattern "https://addons-origin.cursecdn.com/files/2338/490/[module]-[revision](-[classifier]).[ext]"
+    }
+    /*
+    ivy {
+        name "EnderCore"
+        artifactPattern "https://addons-origin.cursecdn.com/files/2340/651/[module]-[revision](-[classifier]).[ext]"
+    }
+    ivy {
+        name "EnderIO"
+        artifactPattern "https://addons-origin.cursecdn.com/files/2340/734/[module]-[revision](-[classifier]).[ext]"
+    }
+    */
 }
 
 dependencies {
     compile "mcp.mobius.waila:Waila:1.7.0-B3_1.9.4"
-    compile "net.minecraftforge.lex:YUNoMakeGoodMap:1.10.2-6.1.0.22:universal"
-    //compile "com.github.LatvianModder:FTBLib:api-1.0"
+    compile "LatMod:FTBLib:1.10.2-3.1.3:api"
+    compile "LatMod:RedstoneFlux:1.2.0"
+    compile "CraftTweaker:CraftTweaker:1.10.2-3.0.13"
+    //compile "net.minecraftforge.lex:YUNoMakeGoodMap:1.10.2-6.1.0.22:universal"
+    //compile "EnderCore:EnderCore:1.10.2-0.4.1.58-beta"
+    //compile "EnderIO:EnderIO:1.10.2-3.0.1.125_beta"
 }
 
 apply plugin: 'java'
