--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "1.2.7"
+version = "1.2.9"
 group = "eladkay.scanner" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "scanner"
 
@@ -42,7 +42,7 @@ repositories {
         name "CraftTweaker"
         artifactPattern "https://addons-origin.cursecdn.com/files/2338/490/[module]-[revision](-[classifier]).[ext]"
     }
-    /*
+
     ivy {
         name "EnderCore"
         artifactPattern "https://addons-origin.cursecdn.com/files/2340/651/[module]-[revision](-[classifier]).[ext]"
@@ -51,7 +51,7 @@ repositories {
         name "EnderIO"
         artifactPattern "https://addons-origin.cursecdn.com/files/2340/734/[module]-[revision](-[classifier]).[ext]"
     }
-    */
+
 }
 
 dependencies {
@@ -60,8 +60,8 @@ dependencies {
     compile "LatMod:RedstoneFlux:1.2.0"
     compile "CraftTweaker:CraftTweaker:1.10.2-3.0.13"
     //compile "net.minecraftforge.lex:YUNoMakeGoodMap:1.10.2-6.1.0.22:universal"
-    //compile "EnderCore:EnderCore:1.10.2-0.4.1.58-beta"
-    //compile "EnderIO:EnderIO:1.10.2-3.0.1.125_beta"
+    compile "EnderCore:EnderCore:1.10.2-0.4.1.58-beta"
+    compile "EnderIO:EnderIO:1.10.2-3.0.1.125_beta"
 }
 
 apply plugin: 'java'
