--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,12 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "1.3.3b"
+version = "1.3.3c"
 group = "eladkay.scanner" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "scanner"
 
 minecraft {
-    version = "1.10.2-12.18.2.2123"
+    version = "1.10.2-12.18.3.2185"
     runDir = "run"
 
     // the mappings can be changed at any time, and must be in the following format.
@@ -26,7 +26,7 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not allways work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_20160518"
+    mappings = "stable_29"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
@@ -65,8 +65,8 @@ dependencies {
     compile "LatMod:RedstoneFlux:1.2.0"
     compile "CraftTweaker:CraftTweaker:1.10.2-3.0.13"
     //compile "net.minecraftforge.lex:YUNoMakeGoodMap:1.10.2-6.1.0.22:universal"
-    compile "EnderCore:EnderCore:1.10.2-0.4.1.58-beta"
-    compile "EnderIO:EnderIO:1.10.2-3.0.1.125_beta"
+    compile "EnderCore:EnderCore:1.10.2-0.4.1.64-beta"
+    compile "EnderIO:EnderIO:1.10.2-3.1.156"
     compile "net.darkhax.tesla:Tesla:1.10.2-1.2.0.37"
 
 }
@@ -87,7 +87,7 @@ processResources {
         include 'mcmod.info'
 
         // replace VERSION and mcversion
-        expand 'VERSION': project.version, 'mcversion': project.minecraft.version
+        expand 'version': project.version, 'mcversion': project.minecraft.version
     }
 
     // copy everything else, thats not the mcmod.info
