--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ group = "eladkay.scanner" // http://maven.apache.org/guides/mini/guide-naming-co
 archivesBaseName = "scanner"
 
 minecraft {
-    version = "1.10.2-12.18.3.2185"
+    version = "1.11-13.19.1.2189"
     runDir = "run"
 
     // the mappings can be changed at any time, and must be in the following format.
@@ -26,7 +26,7 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not allways work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "stable_29"
+    mappings = "snapshot_20170118"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
@@ -65,9 +65,9 @@ dependencies {
     compile "LatMod:RedstoneFlux:1.2.0"
     compile "CraftTweaker:CraftTweaker:1.10.2-3.0.13"
     //compile "net.minecraftforge.lex:YUNoMakeGoodMap:1.10.2-6.1.0.22:universal"
-    compile "EnderCore:EnderCore:1.10.2-0.4.1.64-beta"
-    compile "EnderIO:EnderIO:1.10.2-3.1.156"
-    compile "net.darkhax.tesla:Tesla:1.10.2-1.2.0.37"
+    /*compile "EnderCore:EnderCore:1.10.2-0.4.1.64-beta"
+    compile "EnderIO:EnderIO:1.10.2-3.1.156"*/
+    compile "net.darkhax.tesla:Tesla:1.10.2-1.3.0.51"
 
 }
 
