--- a/src/main/resources/assets/scanner/blockstates/biome_scanner_basic.json
+++ b/src/main/resources/assets/scanner/blockstates/biome_scanner_basic.json
@@ -1,7 +1,7 @@
 {
   "variants": {
     "normal": {
-      "model": "scanner:biomeScannerAdv"
+      "model": "scanner:biome_scanner"
     }
   }
 }
