--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ group = "eladkay.scanner" // http://maven.apache.org/guides/mini/guide-naming-co
 archivesBaseName = "scanner"
 
 minecraft {
-    version = "1.11-13.19.1.2189"
+    version = "1.11.2-13.20.0.2223"
     runDir = "run"
 
     // the mappings can be changed at any time, and must be in the following format.
@@ -59,15 +59,15 @@ repositories {
 }
 
 dependencies {
-    compile "mcp.mobius.waila:Waila:1.7.0-B3_1.9.4"
+    //compile "mcp.mobius.waila:Waila:1.7.0-B3_1.9.4"
 //    compile "LatMod:FTBLib:1.10.2-3.2.1"
 //    compile "LatMod:FTBUtilities:1.10.2-3.2.1"
     compile "LatMod:RedstoneFlux:1.2.0"
-    compile "CraftTweaker:CraftTweaker:1.10.2-3.0.13"
+    //compile "CraftTweaker:CraftTweaker:1.10.2-3.0.13"
     //compile "net.minecraftforge.lex:YUNoMakeGoodMap:1.10.2-6.1.0.22:universal"
     /*compile "EnderCore:EnderCore:1.10.2-0.4.1.64-beta"
     compile "EnderIO:EnderIO:1.10.2-3.1.156"*/
-    compile "net.darkhax.tesla:Tesla:1.10.2-1.3.0.51"
+    compile "net.darkhax.tesla:Tesla:1.11-1.3.0.51"
 
 }
 
