--- a/build.gradle
+++ b/build.gradle
@@ -65,8 +65,8 @@ dependencies {
     compile "LatMod:RedstoneFlux:1.2.0"
     compile "CraftTweaker:CraftTweaker:1.10.2-3.0.13"
     //compile "net.minecraftforge.lex:YUNoMakeGoodMap:1.10.2-6.1.0.22:universal"
-    compile "EnderCore:EnderCore:1.10.2-0.4.1.64-beta"
-    compile "EnderIO:EnderIO:1.10.2-3.1.156"
+    //compile "EnderCore:EnderCore:1.10.2-0.4.1.64-beta"
+    //compile "EnderIO:EnderIO:1.10.2-3.1.156"
     compile "net.darkhax.tesla:Tesla:1.10.2-1.2.0.37"
 
 }
