The Liblification pass 2

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ group = "eladkay.scanner" // http://maven.apache.org/guides/mini/guide-naming-co
 archivesBaseName = "scanner"
 
 minecraft {
-    version = "1.10.2-12.18.3.2202"
+    version = "1.10.2-12.18.3.2422"
     runDir = "run"
 
     // the mappings can be changed at any time, and must be in the following format.
@@ -62,7 +62,7 @@ repositories {
 
 dependencies {
     compile "mcp.mobius.waila:Waila:1.7.0-B3_1.9.4"
-    compile 'LatMod:FTBLib:1.1x-3.6.4:api'
+    //compile 'LatMod:FTBLib:1.1x-3.6.5:api'
     compile "LatMod:RedstoneFlux:1.2.0"
     compile "CraftTweaker:CraftTweaker:1.10.2-3.0.13"
     //compile "net.minecraftforge.lex:YUNoMakeGoodMap:1.10.2-6.1.0.22:universal"
