particles for terrainscanner + failed te

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ minecraft {
     version = "1.10.2-12.18.3.2422"
     runDir = "run"
 
-    // the mappings can be changed at any time, and must be in the following format.
+    // the mappings can be changed at any animTime, and must be in the following format.
     // snapshot_YYYYMMDD   snapshot are built nightly.
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not allways work.
