--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "1.6.5"
+version = "1.6.6"
 group = "eladkay.scanner" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "scanner"
 
@@ -66,7 +66,8 @@ dependencies {
     deobfProvided "mezz.jei:jei_1.12.2:4.15.0.268:api"
     runtime "mezz.jei:jei_1.12.2:4.15.0.268"
     //deobfCompile "com.feed_the_beast.mods:FTBLib:5.4.1.87"
-    compile files("libs/FTBLib-5.4.1.87.jar")
+    compile files("libs/FTBLib-5.4.7.2.jar")
+    compile files("libs/FTBUtilities-5.4.1.130.jar")
     deobfCompile "mcp.mobius.waila:Hwyla:1.8.26-B41_1.12.2"
     //compile 'LatMod:FTBLib:1.1x-3.6.5:api'
     deobfCompile "cofh:RedstoneFlux:1.12-2.1.0.6:universal"
