"New" textures and models, including some for future features
Signed-off-by: Eladkay <eladkay@gmail.com>

--- a/src/main/resources/assets/scanner/blockstates/biome_scanner_elite.json
+++ b/src/main/resources/assets/scanner/blockstates/biome_scanner_elite.json
@@ -1,7 +1,7 @@
 {
   "variants": {
     "normal": {
-      "model": "scanner:biome_scanner"
+      "model": "scanner:biome_scanner_elite"
     }
   }
 }
